spring-cloud-config/cloud-config-client/k8s-cloud-config-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-config-client
  labels:
    app: cloud-config-client
    demo: spring-cloud-config-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-config-client
  template:
    metadata:
      labels:
        app: cloud-config-client
    spec:
      containers:
        - name: cloud-config-client
          image: quay.io/felipeg/demo-config-client:0.0.1
          ports:
            - containerPort: 8080
