spring-cloud-config/cloud-config-client/k8s-cloud-config-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-config-client
  labels:
    app: cloud-config-client
    demo: spring-cloud-config-demo
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: cloud-config-client
